--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
           <label>Prediction 2-</label>
           <p class="emotion_name" id="reult_emotion_name2"></p>
-          <p class="emoji" id="update_emoji2"></p
+          <p class="emoji" id="update_emoji2"></p>
 
         </div>
 
